--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@gsap/react": "^2.1.1",
     "@react-three/drei": "^9.114.0",
     "@react-three/fiber": "^8.17.9",
     "axios": "^1.7.7",
     "clsx": "^2.1.1",
     "framer-motion": "^11.11.1",
+    "gsap": "^3.12.5",
     "lottie-react": "^2.4.0",
     "primeicons": "^7.0.0",
     "react": "^18.3.1",
