--- a/package.json
+++ b/package.json
@@ -15,9 +15,10 @@
     "@react-three/fiber": "^8.17.9",
     "axios": "^1.7.7",
     "clsx": "^2.1.1",
-    "framer-motion": "^11.11.1",
+    "framer-motion": "^11.11.7",
     "gsap": "^3.12.5",
     "lottie-react": "^2.4.0",
+    "mini-svg-data-uri": "^1.4.4",
     "primeicons": "^7.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
