--- a/package.json
+++ b/package.json
@@ -11,13 +11,16 @@
   },
   "dependencies": {
     "@gsap/react": "^2.1.1",
+    "@radix-ui/react-slot": "^1.1.0",
     "@react-three/drei": "^9.114.0",
     "@react-three/fiber": "^8.17.9",
     "axios": "^1.7.7",
+    "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "framer-motion": "^11.11.7",
     "gsap": "^3.12.5",
     "lottie-react": "^2.4.0",
+    "lucide-react": "^0.451.0",
     "mini-svg-data-uri": "^1.4.4",
     "primeicons": "^7.0.0",
     "react": "^18.3.1",
@@ -25,6 +28,7 @@
     "react-router-dom": "^6.26.2",
     "react-scroll": "^1.9.0",
     "tailwind-merge": "^2.5.3",
+    "tailwindcss-animate": "^1.0.7",
     "three": "^0.169.0",
     "three-globe": "^2.32.0"
   },
