--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-router-dom": "^6.26.2",
     "react-scroll": "^1.9.0",
     "react-toastify": "^10.0.5",
+    "sweetalert2": "^11.14.3",
     "tailwind-merge": "^2.5.3",
     "tailwindcss-animate": "^1.0.7",
     "three": "^0.169.0",
